Fixed Initial Collapsable Article sizing

--- a/src/Components/Article/style.css
+++ b/src/Components/Article/style.css
@@ -6,7 +6,6 @@
   padding-top: 5px;
   padding-bottom: 5px;
   overflow: hidden;
-  transition: 0.5s;
   min-height: fit-content;
 }
 
